# unifycoin

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libunfyconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md
.github/workflows/: guix-build.yml  release_alpha.yml  (+3 more)
.tx/: config
contrib/: README.md  gitian-build.py  install_db4.sh  unfy-cli.bash-completion  unfy-qt.pro  unfy-tx.bash-completion  unfyd.bash-completion  valgrind.supp
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  instantsend.md  masternode-budget.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  unfy-conf.md  zmq.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addressindex.cpp  addressindex.h  amount.h  batchedlogger.cpp  batchedlogger.h  bip39_english.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  blockencodings.cpp  cachemap.h  cachemultimap.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  compat.h  context.h  dsnotificationinterface.cpp  dummywallet.cpp  flat-database.h  founder_payment.cpp  founder_payment.h  hash.h  hdchain.cpp  hdchain.h  init.cpp  init.h  key_io.cpp  logging.cpp  logging.h  (+35 more)
src/unfybls/rust-bindings/bls-signatures/: Cargo.toml
src/unfybls/rust-bindings/bls-signatures/src/: elements.rs  lib.rs  private_key.rs  schemes.rs  utils.rs
src/unfybls/rust-bindings/bls-signatures/src/bip32/: chain_code.rs  private_key.rs  public_key.rs
src/unfybls/src/: CMakeLists.txt  legacy.cpp  threshold.cpp
test/: README.md  get_previous_releases.py
(+584 files in other folders)
