[package]
name = "bls-signatures"
description = ""
version = "1.2.5"
edition = "2021"

[features]
legacy = []
bip32 = []
use_serde = ["serde"]
unfy_helpers = ["rand"]
default = [ "legacy", "bip32", "unfy_helpers", "use_serde"]
apple = ["bls-unfy-sys/apple"]

[dependencies]
bls-unfy-sys = { path = "../bls-unfy-sys" }
serde = { version= "1.0.160", features = ["derive"], optional = true}
rand = { version= "0.8.5", optional = true}
